change folder structure, move ExtendedSpreadsheet.cs to the components folder

--- a/CubeCell/Views/MainWindow.axaml
+++ b/CubeCell/Views/MainWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:vm="using:CubeCell.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CubeCell.Views"
+        xmlns:components="clr-namespace:CubeCell.Views.Components"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="CubeCell.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -16,6 +16,6 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <local:ExtendedSpreadsheet Name="MySpreadSheet"></local:ExtendedSpreadsheet>
+    <components:ExtendedSpreadsheet Name="MySpreadSheet"></components:ExtendedSpreadsheet>
 
 </Window>
