--- a/src/CubeCell.App/Views/AboutPage.axaml
+++ b/src/CubeCell.App/Views/AboutPage.axaml
@@ -5,7 +5,7 @@
              xmlns:vm="clr-namespace:CubeCell.App.ViewModels"
              x:DataType="vm:AboutPageViewModel"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="CubeCell.App.Views.About">
+             x:Class="CubeCell.App.Views.AboutPage">
     <StackPanel>
         <TextBlock>About</TextBlock>
         <Button Command="{Binding GoBackCommand}" Content="Go back" />
