--- a/src/CubeCell.App/Views/AboutPage.axaml
+++ b/src/CubeCell.App/Views/AboutPage.axaml
@@ -3,7 +3,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:CubeCell.App.ViewModels"
-             x:DataType="vm:AboutPageViewModel"
+             xmlns:pages="clr-namespace:CubeCell.App.ViewModels.Pages"
+             x:DataType="pages:AboutPageViewModel"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="CubeCell.App.Views.AboutPage">
     <StackPanel>
